--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header></header>
         <main>
-            <h1>Lesson 1</h1>
+            <h1>Alexandra Green's Portfolio</h1>
             <p></p>
         </main>
         <footer></footer>
