Adding week01 link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <header></header>
         <main>
             <h1>Alexandra Green's Portfolio</h1>
-            <p></p>
+            <h2>week01</h2>
+            <a href="week01/holygrail.html">Holy Grail</a>
         </main>
         <footer></footer>
         <script src="scripts/index.js"></script>
