--- a/index.html
+++ b/index.html
@@ -3,17 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 1</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <meta name="author" content="Alexandra Green"/>
+    <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal">
+    <title>Alexandra Green - WDD 230 - Web Frontend Development</title>
+     <!-- Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Taviraj:wght@300&display=swap" rel="stylesheet">
+    <!-- The last thing listed is the most important. That's why the larger file is at the bottom. -->
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
     <body>
-        <header></header>
-        <main>
+        <header>
+            <img src="" alt="">
             <h1>Alexandra Green's Portfolio</h1>
-            <h2>week01</h2>
-            <a href="week01/holygrail.html">Holy Grail</a>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Chamber</a></li>
+                <li><a href="#">Site Plan</a></li>
+                <li><a href="#">Form</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h2>WDD 230: Web Frontend Development</h2>
+            <section class="card">
+                <h3>Learning Activities</h3>
+                <ul>
+                    <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
+                    <li>Week 2:</li>
+                    <li>Week 3:</li>
+                    <li>Week 4:</li>
+                    <li>Week 5:</li>
+                    <li>Week 6:</li>
+                </ul>
+            </section> 
+            <section class="card">
+                <h3>Information</h3>
+                    <p>Weather</p>
+                    <p>Place</p>
+                    <p>15 Visits to the Page</p>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+            <p id="year">&copy;Alexandra Green <br> United States of America </p>
+            <p id="lastModified"></p>
+        </footer>
         <script src="scripts/index.js"></script>
+        <script src="scripts/getDates.js"></script>
     </body>
 </html>
