--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 </head>
     <body>
         <header>
-            <img src="" alt="">
-            <h1>Alexandra Green's Portfolio</h1>
+                
+                <h1>Alexandra Green's Portfolio</h1> 
+                <img src="/images/web_img.jpg" alt="Alexandra Green Photo">   
         </header>
         <nav>
             <ul>
@@ -30,7 +31,6 @@
         <main>
             <h2>WDD 230: Web Frontend Development</h2>
             <section class="card" id="learning-activity">
-                <img src="" alt="">
                 <h3>Learning Activities</h3>
                 <ul>
                     <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
