Fixed picture hopefully

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <header> 
                 <h1>Alexandra Green's Portfolio</h1> 
-                <img src="/images/web_img.jpg" alt="Alexandra Green Photo">   
+                <img src="images/web_img.jpg" alt="Alexandra Green Photo">   
         </header>
         <nav>
             <ul>
