--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Alexandra Green"/>
+    <meta name="author" content="Alexandra Green">
     <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal">
     <title>Alexandra Green - WDD 230 - Web Frontend Development</title>
      <!-- Fonts -->
