--- a/week01/site-plan.html
+++ b/week01/site-plan.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ririe Chamber of Commerce</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy:ital@1&family=Source+Serif+4:opsz,wght@8..60,500&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/site-plan.css">
 </head>
 <body>
     <main>
@@ -19,21 +23,33 @@
             <ul>
                 <li>Visitors can come to join the Chamber of Commerce to promote their business and aid their community.</li>
                 <li>An event being held this month is Ririe Days, where small businesses gather to sell merchandise and provide games and food for local resident of the town.</li>
-                <li>All contact information for </li>
-                <li></li>
+                <li>All contact information for the Chamber of Commerce will be found on the Join page. </li>
+                <li>Prices for joining the Chamber of Commerce will be on the Join page as well.</li>
             </ul>
         </section>
 
         <section class="color-schema">
-
+            <h2>Color Schema</h2>
+            <div class="box1"></div>
+            <div class="box2"></div>
         </section>
-
+        
         <section class="typography">
-
+            <h1>Typography</h1>
+            <h3>Large font.</h3>
+            <p>Small font.</p>
         </section>
 
+        <h2>Wireframes</h2>
         <section class="wireframe">
-
+            <h3>Home Page Wireframe</h3>
+            <img src="/images/DirectoryPage.png" alt="">
+            <h3>Discovery Page Wireframe</h3>
+            <img src="/images/DiscoveryPage.png" alt="">
+            <h3>Directory Page Wireframe</h3>
+            <img src="/images/DirectoryPage.png" alt="Directory Page">
+            <h3>Join Page Wireframe</h3>
+            <img src="/images/JoinPage.png" alt="JoinPage">
         </section>
 
     </main>
