--- a/week01/site-plan.html
+++ b/week01/site-plan.html
@@ -43,13 +43,13 @@
         <h2>Wireframes</h2>
         <section class="wireframe">
             <h3>Home Page Wireframe</h3>
-            <img src="/images/DirectoryPage.png" alt="">
+            <img src="images/DirectoryPage.png" alt="">
             <h3>Discovery Page Wireframe</h3>
-            <img src="/images/DiscoveryPage.png" alt="">
+            <img src="images/DiscoveryPage.png" alt="">
             <h3>Directory Page Wireframe</h3>
-            <img src="/images/DirectoryPage.png" alt="Directory Page">
+            <img src="images/DirectoryPage.png" alt="Directory Page">
             <h3>Join Page Wireframe</h3>
-            <img src="/images/JoinPage.png" alt="JoinPage">
+            <img src="images/JoinPage.png" alt="JoinPage">
         </section>
 
     </main>
