--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section class="card" id="learning-activity">
                 <h3>Learning Activities</h3>
                 <ul>
-                    <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
+                    <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a>, <a href="/week01/site-plan.html">Site Plan</a></li>
                     <li>Week 2:</li>
                     <li>Week 3:</li>
                     <li>Week 4:</li>
