--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Chamber</a></li>
-                <li><a href="#">Site Plan</a></li>
+                <li><a href="week01/site-plan.html">>Site Plan</a></li>
                 <li><a href="#">Form</a></li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
             <section class="card" id="learning-activity">
                 <h3>Learning Activities</h3>
                 <ul>
-                    <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a>, <a href="week01/site-plan.html">Site Plan</a></li>
+                    <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
                     <li>Week 2:</li>
                     <li>Week 3:</li>
                     <li>Week 4:</li>
