--- a/week01/site-plan.html
+++ b/week01/site-plan.html
@@ -43,6 +43,7 @@
             <h2>Color Schema</h2>
             <div class="box1"></div>
             <div class="box2"></div>
+            <div class="box3"></div>
         </section>
         
         <section class="typography">
