--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h3>Learning Activities</h3>
                 <ul>
                     <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
-                    <li>Week 2: <a href="week02/design.html">Design</a>, <a href="week02/bom.html">Book of Mormon</a></li>
+                    <li>Week 2: <a href="week02/design.html">Design</a>, <a href="week02/bom.html">Book of Mormon</a>, <a href="https://codepen.io/Xana-Green/pen/QWzxpQy">CodePen Hamburger Menu</a></li>
                     <li>Week 3:</li>
                     <li>Week 4:</li>
                     <li>Week 5:</li>
