CSS Normalize and Icons

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Alexandra Green">
     <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal">
+    <meta property="og:title" content="Course Homepage">
+    <meta property="og:type" content="Course links">
+    <meta property="og:image" content="http://pics4.city-data.com/cpicc/cfiles46545.jpg">
+    <meta property="og:url" content="https://byuixana.github.io/wdd230/">
     <title>Alexandra Green - WDD 230 - Web Frontend Development</title>
      <!-- Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Taviraj:wght@300&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="images/favicon.ico">
     <!-- The last thing listed is the most important. That's why the larger file is at the bottom. -->
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
