--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Taviraj:wght@300&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="images/favicon.ico">
+     <link rel="icon" href="myfavicon.ico">
     <!-- The last thing listed is the most important. That's why the larger file is at the bottom. -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
