Fixed Hamburger Menu (mostly)

--- a/week01/site-plan.html
+++ b/week01/site-plan.html
@@ -48,8 +48,8 @@
         
         <section class="typography">
             <h1>Typography</h1>
-            <h3>Large font.</h3>
-            <p>Small font.</p>
+            <h3>Sans-serif</h3>
+            <p>Lucida</p>
         </section>
 
         <h2>Wireframes</h2>
