--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,6 +6,7 @@
     <title>Ririe - Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon-32x32.ico">
 </head>
 <body>
     <header> 
