--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,7 +51,9 @@
         </section>
     </main>
     <footer>
-        <p>Alexandra Green - byuixana@byui.edu - WDD230 Chamber Site - <p id="mod"></p></p> 
+        <p>
+            Alexandra Green - byuixana@byui.edu - WDD230 Chamber Site - <p id="mod"></p>
+        </p> 
     </footer>
     <script src="scripts/chamber.js"></script>
 </body>
