--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 
         </header>
         <nav>
-            <button type="menu" id="menu"></button>
+            <button id="menu"></button>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="chamber/index.html">Chamber</a></li>
