--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Alexandra Green">
     <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal">
     <meta property="og:title" content="Course Homepage">
-    <meta property="og:type" content="Course links">
-    <meta property="og:image" content="http://pics4.city-data.com/cpicc/cfiles46545.jpg">
+    <meta property="og:type" content="links">
+    <meta property="og:image" content="https://th.bing.com/th/id/R.315f93535c7de9472efa109966057e2f?rik=XzRku7KWu54zwQ&pid=ImgRaw&r=0">
     <meta property="og:url" content="https://byuixana.github.io/wdd230/">
     <title>Alexandra Green - WDD 230 - Web Frontend Development</title>
      <!-- Fonts -->
