fixed meta tag for type (again)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Alexandra Green">
     <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal">
     <meta property="og:title" content="Course Homepage">
-    <meta property="og:type" content="homepage">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://th.bing.com/th/id/R.315f93535c7de9472efa109966057e2f?rik=XzRku7KWu54zwQ&pid=ImgRaw&r=0">
     <meta property="og:url" content="https://byuixana.github.io/wdd230/">
     <title>Alexandra Green - WDD 230 - Web Frontend Development</title>
