--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 </head>
     <body>
         <header> 
-                <h1>
-                    Alexandra Green's Portfolio 
-                </h1>    
-                <img src="images/web_img.jpg" alt="Alexandra Green Photo" id="xana_pic">
+            <img src="images/web_img.jpg" alt="Alexandra Green Photo" id="xana_pic">
+                <h1>Alexandra Green's Portfolio</h1>    
+                
                 <button id="dark-mode">Dark Mode</button>   
         </header>
         <nav>
