--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <p>
                 <span id="lastModified"></span>
             </p>
+            <p>United States of America</p>
         </footer>
         <script src="scripts/getDates.js"></script>
     </body>
