--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <section class="card" id="info">
                 <h3>Information</h3>
                     <p id="weather">Weather</p>
-                    <p id="place">Place</p>
+                    <p id="place">Place: Ririe, Idaho, United States</p>
                     <p id="visits"></p>
             </section>
         </main>
