--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
     <body>
         <header> 
-            <img src="images/web_img.jpg" alt="Alexandra Green Photo" id="xana_pic">
+            <img src="images/web_img.webp" alt="Alexandra Green Photo" id="xana_pic">
                 <h1>Alexandra Green's Portfolio</h1>    
                 
                 <button id="dark-mode">Dark Mode</button>   
