--- a/week03/index.html
+++ b/week03/index.html
@@ -11,12 +11,12 @@
         <h1>Lazy Load Practice</h1>
     </header>
     <main>
-        <img src="" alt="" loading="lazy" width="600px" height="400px">
-        <img src="" alt="" loading="lazy" width="600px" height="400px">
-        <img src="" alt="" loading="lazy" width="600px" height="400px">
-        <img src="" alt="" loading="lazy" width="600px" height="400px">
-        <img src="" alt="" loading="lazy" width="600px" height="400px">
-        <img src="" alt="" loading="lazy" width="600px" height="400px">
+        <img src="week03/images/daniel-leone-g30P1zcOzXo-unsplash.webp" alt="" loading="lazy" width="600px" height="400px">
+        <img src="week03/images/jeremy-bishop-dR_q93lfaTw-unsplash.webp" alt="" loading="lazy" width="600px" height="400px">
+        <img src="week03/images/neom-207NEuFvjlg-unsplash.webp" alt="" loading="lazy" width="600px" height="400px">
+        <img src="week03/images/rohit-tandon-9wg5jCEPBsw-unsplash.webp" alt="" loading="lazy" width="600px" height="400px">
+        <img src="week03/images/samuel-ferrara-1527pjeb6jg-unsplash.webp" alt="" loading="lazy" width="600px" height="400px">
+        <img src="week03/images/kalen-emsley-Bkci_8qcdvQ-unsplash.webp" alt="" loading="lazy" width="600px" height="400px">
     </main>
     <footer>
         &copy; Alexandra Green
