Changed lastMod location

--- a/week03/index.html
+++ b/week03/index.html
@@ -19,7 +19,8 @@
         <img src="images/kalen-emsley-Bkci_8qcdvQ-unsplash.webp" alt="" loading="lazy" width="400px" height="600px">
     </main>
     <footer>
-        <p> &copy; Alexandra Green <div id="last-modified"></div></p>
+        <p> &copy; Alexandra Green </p>
+        <div id="last-modified"></div>
         
     </footer>
 </body>
