--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,9 +51,9 @@
     <main>
         <h3 class="visit-notif"></h3>
        
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="images/7NRanch.webp" alt="">
+        <img src="images/HeiseHotsprings.webp" alt="">
+        <img src="images/RirieFields.webp" alt="">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
