Image effects and Javascript

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,6 +43,7 @@
             <div class="sidebar">
                 <section>
                     <h3>Statistical Data</h3>
+                    <p id="visits"></p>
                 </section>
                 <section>
                     <h3>Places to See</h3>
@@ -91,6 +92,7 @@
         <p>
             Alexandra Green - byuixana@byui.edu - WDD230 Chamber Site - 
             <div id="mod"></div>
+            <div></div>
         </p> 
     </footer>
     <script src="scripts/chamber.js"></script>
