Updated images and CSS

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -48,7 +48,6 @@
                 <section>
                     <h3>Places to See</h3>
                     <ul>
-                        <li></li>
                         <li>Cress Creek Nature Trail</li>
                         <li>Kelly Canyon Ski Resort</li>
                         <li>Heise Hotsprings</li>
@@ -82,7 +81,7 @@
                 <img src="images/RirieFields.webp" alt="Ririe Fields" loading="lazy" width="400px" height="600px">
                 <img src="images/RirieReservoir.webp" alt="Ririe Reservoir" loading="lazy" width="400px" height="600px">
                 <img src="images/KellyCanyon.webp" alt="Kelly Canyon" loading="lazy" width="400px" height="600px">
-                <img src="images/RirieEats.webp" alt="Ririe Eats" loading="lazy" width="400px" height="600px">
+                <img src="images/RirieFineDining.webp" alt="Ririe Eats" loading="lazy" width="400px" height="600px">
             </picture>
         </div>
        
