--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
         <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="chamber/index.html">Directory</a></li>
-            <li><a href="week01/site-plan.html">Discovery</a></li>
+            <li><a href="chamber/discover.html">Discovery</a></li>
             <li><a href="#">Join</a></li>
         </ul>
     </nav>
