--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,6 +44,8 @@
                 <section>
                     <h3>Statistical Data</h3>
                     <p id="visits"></p>
+                    <p>Population: 687</p>
+                    <p>Potatoes Grown This Year: More than you can imagine</p>
                 </section>
                 <section>
                     <h3>Places to See</h3>
@@ -76,12 +78,24 @@
             </div>
             <h3 class="visit-notif"></h3>
             <picture id="picture-column">
-                <img src="images/7NRanch.webp" alt="7N Ranch" loading="lazy" width="400px" height="600px">
-                <img src="images/HeiseHotsprings.webp" alt="Heise Hotsprings" loading="lazy" width="400px" height="600px">
-                <img src="images/RirieFields.webp" alt="Ririe Fields" loading="lazy" width="400px" height="600px">
-                <img src="images/RirieReservoir.webp" alt="Ririe Reservoir" loading="lazy" width="400px" height="600px">
-                <img src="images/KellyCanyon.webp" alt="Kelly Canyon" loading="lazy" width="400px" height="600px">
-                <img src="images/RirieFineDining.webp" alt="Ririe Eats" loading="lazy" width="400px" height="600px">
+                <div class="row1">
+                    <source srcset="images/7NRanch-large.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/7NRanch.webp" alt="7N Ranch" loading="lazy" width="400px" height="600px">
+                    <source srcset="images/HeiseHotsprings-large.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/HeiseHotsprings.webp" alt="Heise Hotsprings" loading="lazy" width="400px" height="600px">
+                </div>
+                <div class="row2">
+                    <source srcset="images/RirieFields-large.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/RirieFields.webp" alt="Ririe Fields" loading="lazy" width="400px" height="600px">
+                    <source srcset="images/RirieReservoir-large.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/RirieReservoir.webp" alt="Ririe Reservoir" loading="lazy" width="400px" height="600px">
+                </div>
+                <div class="row3">
+                    <source srcset="images/7NKellyCanyon-large.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/KellyCanyon.webp" alt="Kelly Canyon" loading="lazy" width="400px" height="600px">
+                    <source srcset="images/KellyCanyon-large.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/RirieFineDining.webp" alt="Ririe Eats" loading="lazy" width="400px" height="600px">
+                </div>
             </picture>
         </div>
        
