--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
                         <li>Week 2: <a href="week02/design.html">Design</a>, <a href="week02/bom.html">Book of Mormon</a>, <a href="https://codepen.io/Xana-Green/pen/QWzxpQy">CodePen Hamburger Menu</a></li>
                         <li>Week 3:<a href="week03/images/landscape_optimized.webp">WebP</a>, <a href="week03/index.html">Lazy Load</a></li>
-                        <li>Week 4:</li>
+                        <li>Week 4: <a href="week04/form-start/index.html">Form</a>, <a href="https://codepen.io/Xana-Green/pen/zYexePq">Pseudo-selectors</a>,<a href="week04/images/Combinators.png">Combinators</a>, <a href="week04/tablebuild.html">Tables</a></li>
                         <li>Week 5:</li>
                         <li>Week 6:</li>
                     </ul>
