--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,9 +40,9 @@
                     <label>Phone Number: <input type="telephone" name="phone" name="phone-number" id="phone-number" required></label>
                     <label>Business/Organization Name: <input type="text" required></label>
                 </fieldset>
-                <fieldset id="radio-buttons">
+               
                     <label>Membership Level:</label>
-
+                    <fieldset id="radio-buttons">
                         <label id="gold">
                         <input type="radio" name="group">
                         Gold
@@ -71,12 +71,33 @@
             <div class="membership">
                 <section class="gold-member">
                     <h3>Gold Member</h3>
+                    <ul>
+                        <li>$500 a year</li>
+                        <li>Advertising at all community events</li>
+                        <li>Event discounts for all employees</li>
+                        <li>Spotlight on the home page</li>
+                        <li>Free entry to networking events</li>
+                    </ul>
                 </section>
                 <section class="silver-member">
                     <h3>Silver Member</h3>
+                    <ul>
+                        <li>$350 a year</li>
+                        <li>Advertising at half of community events</li>
+                        <li>Event discounts for employees to certain community events</li>
+                        <li>Spotlight on the home page</li>
+                        <li>Half-priced entry to netwokring events</li>
+                    </ul>
                 </section>
                 <section class="broze-member">
                     <h3>Broze Member</h3>
+                    <ul>
+                        <li>$150 a year</li>
+                        <li>Advertising at two community events</li>
+                        <li>Event discounts for employees to 3 community events</li>
+                        <li>Spotlight on the home page</li>
+                        <li>Free entry to one netwoorking event</li>
+                    </ul>
                 </section>
             </div>
         </main>
