--- a/index.html
+++ b/index.html
@@ -71,5 +71,6 @@
             <span>United States of America</span>
         </footer>
         <script src="scripts/getDates.js"></script>
+        <script src="scripts/links.js"></script>
     </body>
 </html>
