Links File, Other Stuff

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <section class="card" id="info">
                     <h3>Information</h3>
                         <p id="weather">Weather</p>
+                        <div id="weather-icon"></div>
                         <p id="place">Place: Ririe, Idaho, United States</p>
                         <p id="visits"></p>
                 </section>
