--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li><a href="#">Home</a></li>
-            <li><a href="chamber/index.html">Directory</a></li>
+            <li><a href="directory.html">Directory</a></li>
             <li><a href="discover.html">Discovery</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
