--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,17 +31,22 @@
     </header>
     <nav>
         <button id="menu"></button>
-        <ul class="navigation">
+        <ul class="navigation" id="directory-nav">
             <li><a href="#">Home</a></li>
             <li><a href="chamber/index.html">Directory</a></li>
             <li><a href="discover.html">Discovery</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
-    <main class="directory-main">
+    <main class="main-directory">
+        <h1>Directory</h1>
        <button id="grid">Grid</button>
        <button id="list">List</button>
-       
+       <div class="directory">
+
+       </div>
+
+
     </main>
     <footer id="directory-footer">
       Alexandra Green - byuixana@byui.edu - WDD230 Chamber Site - <div id="mod"></div>
