--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span id="temple-name">Idaho Falls Temple</span>
                 <section class="card" id="learning-activity">
                     <h3>Learning Activities</h3>
-                    <ul>
+                    <ul id="list">
                         <li>Week 1: <a href="week01/holygrail.html">Holy Grail</a></li>
                         <li>Week 2: <a href="week02/design.html">Design</a>, <a href="week02/bom.html">Book of Mormon</a>, <a href="https://codepen.io/Xana-Green/pen/QWzxpQy">CodePen Hamburger Menu</a></li>
                         <li>Week 3:<a href="week03/images/landscape_optimized.webp">WebP</a>, <a href="week03/index.html">Lazy Load</a></li>
