--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,14 +23,14 @@
     <header> 
         <h1 class="chamber-h1">Ririe Chamber of Commerce</h1>
         <div class="call-to-action">
-            <h3>RIRIE: A PLACE WORTH INVESTING IN</h3>
+            <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
             <button id="join">Join</button> 
         </div>   
         <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
         
     </header>
     <nav>
-        <button id="menu"></button>
+        <button id="menu" name="button"></button>
         <ul class="navigation" id="directory-nav">
             <li><a href="#">Home</a></li>
             <li><a href="chamber/index.html">Directory</a></li>
