--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,12 +24,12 @@
         <img id="hero-img" src="images/RirieViews.webp" alt="Ririe Photo"> 
         <div class="call-to-action">
            
-            <h3>RIRIE: A PLACE WORTH INVESTING IN</h3>
+            <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
             <button id="join-discover">Join</button> 
         </div>    
     </header>
     <nav>
-        <button id="menu"></button>
+        <button id="menu" name="button"></button>
         <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="#">Directory</a></li>
