--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,14 +25,14 @@
        
         <h1 class="chamber-h1">Ririe Chamber of Commerce</h1>
         <div class="call-to-action">
-            <h3>RIRIE: A PLACE WORTH INVESTING IN</h3>
+            <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
             <button id="join">Join</button> 
         </div>   
         <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
         
     </header>
     <nav>
-        <button id="menu"></button>
+        <button id="menu" name="button"></button>
         <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="directory.html">Directory</a></li>
@@ -54,6 +54,10 @@
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate accusamus saepe aperiam, esse nesciunt quos harum exercitationem nobis minus labore voluptates praesentium obcaecati eum pariatur, optio sequi asperiores quis odio.</p>
         </section>
     </main>
+    <div class="banner">
+        <button class="x">❌</button>
+        <h4>Chamber meeting every Wednesday at 7:00! All are welcome!</h4>
+    </div>
     <footer>
 
             Alexandra Green - byuixana@byui.edu - WDD230 Chamber Site - 
