--- a/chamber/join.html
+++ b/chamber/join.html
@@ -31,7 +31,7 @@
         
     </header>
     <nav>
-        <button id="menu"></button>
+        <button id="menu" name="button"></button>
         <ul class="navigation">
             <li><a href="index.html">Home</a></li>
             <li><a href="chamber/index.html">Directory</a></li>
