--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,10 +25,13 @@
        
         <h1 class="chamber-h1">Ririe Chamber of Commerce</h1>
         <div class="call-to-action">
-            <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
-            <button id="join">Join</button> 
+            <div class="txt">
+                <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
+                <button id="join">Join</button> 
+            </div>
+            <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
         </div>   
-        <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
+ 
         
     </header>
     <nav>
