--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,9 +22,10 @@
         <h1 class="chamber-h1">Discover Ririe</h1>
         <img id="hero-img" src="images/RirieViews.webp" alt="Ririe Photo"> 
         <div class="call-to-action">
-           
-            <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
-            <button id="join-discover">Join</button> 
+            <div class="txt">
+                <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
+                <button id="join">Join</button> 
+            </div>
         </div>    
     </header>
     <nav>
