--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,10 +23,10 @@
 <body>
     <header> 
         <h1 class="chamber-h1">Ririe Chamber of Commerce</h1>
-        <div class="call-to-action">
+        <div class="txt">
             <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
             <button id="join">Join</button> 
-        </div>   
+        </div>  
         <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
         
     </header>
