--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -31,7 +31,7 @@
     <nav>
         <button id="menu" name="button"></button>
         <ul class="navigation">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="discover.html">Discovery</a></li>
             <li><a href="#">Join</a></li>
