--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,12 +22,13 @@
 <body id="directory-body">
     <header> 
         <h1 class="chamber-h1">Ririe Chamber of Commerce</h1>
-        <div class="txt">
-            <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
-            <button id="join">Join</button> 
-        </div>
-        <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
-        
+        <div class="call-to-action">
+            <div class="txt">
+                <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
+                <button id="join">Join</button> 
+            </div>
+            <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
+        </div>  
     </header>
     <nav>
         <button id="menu" name="button"></button>
