--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -20,13 +20,13 @@
     <header> 
         
         <h1 class="chamber-h1">Discover Ririe</h1>
-        <img id="hero-img" src="images/RirieViews.webp" alt="Ririe Photo"> 
         <div class="call-to-action">
             <div class="txt">
                 <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
                 <button id="join">Join</button> 
             </div>
-        </div>    
+            <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
+        </div>   
     </header>
     <nav>
         <button id="menu" name="button"></button>
