--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
         </nav>
         <main class="main">
             <h2>WDD 230: Web Frontend Development</h2>
-            <picture>
-                <source srcset="images/IFtemple.webp" media="(max-width: 500px)" loading="lazy" width="400px" height="600px"> 
-                <source srcset="images/IFtemple-med.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
-                <img src="images/IFtemple-large.webp" alt="Idaho Falls Temple" width="400px" height="600px" id="temple-img">
-               
-            </picture>
-            <span id="temple-name">Idaho Falls Temple</span>
+            <div class="temple">
+                <picture>
+                    <source srcset="images/IFtemple.webp" media="(max-width: 500px)" loading="lazy" width="400px" height="600px"> 
+                    <source srcset="images/IFtemple-med.webp" media="(max-width:1000px)" loading="lazy" width="400px" height="600px">
+                    <img src="images/IFtemple-large.webp" alt="Idaho Falls Temple" width="400px" height="600px" id="temple-img">
+                </picture>
+                <span id="temple-name">Idaho Falls Temple</span>
+            </div>
+            
                 <section class="card" id="learning-activity">
                     <h3>Learning Activities</h3>
                     <ul id="list">
