--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
     <meta name="author" content="Ririe Chamber of Commcerce">
     <meta name="description" content="WDD 230 - Chamber of Commerce Homepage">
     <meta property="og:title" content="Chamber Homepage">
@@ -26,7 +25,7 @@
         <div class="call-to-action">
             <div class="txt">
                 <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
-                <button id="join">Join</button> 
+                <!-- <button id="join">Join</button>  -->
             </div>
             <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
         </div>  
