--- a/chamber/join.html
+++ b/chamber/join.html
@@ -119,6 +119,7 @@
             <div id="mod"></div>
         
         </footer>
+        <script src="scripts/chamber.js"></script>
     </body>
 
 </html>
