--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,9 +33,9 @@
     <nav>
         <button id="menu" name="button"></button>
         <ul class="navigation" id="directory-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="chamber/index.html">Directory</a></li>
-            <li><a href="discover.html">Discovery</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="discover.html">Discover</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
