--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,10 +50,13 @@
         </section>
         <section>
             <h3>Weather</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi omnis suscipit fugiat magnam quia nihil ut, aperiam illo, impedit nam autem nobis deleniti laudantium. Ea nihil nobis quisquam veniam hic.</p>
+            <p>Temperature:<span id="temperature"></span></p>
+            <img id="weather-icon">
+            <figcaption></figcaption>
+            <span id="three-day-forecast"></span>       
         </section>
         <section>
-            <h3>Buy Local</h3>
+            <h3>Business Spotlight</h3>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate accusamus saepe aperiam, esse nesciunt quos harum exercitationem nobis minus labore voluptates praesentium obcaecati eum pariatur, optio sequi asperiores quis odio.</p>
         </section>
     </main>
@@ -68,5 +71,6 @@
  
     </footer>
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
