--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="chamber/index.html">Chamber</a></li>
                 <li><a href="week01/site-plan.html">Site Plan</a></li>
-                <li><a href="#">Form</a></li>
+                <li><a href="form.html">Form</a></li>
             </ul>
         </nav>
         <main class="main">
@@ -61,7 +61,7 @@
                 <section class="card" id="info">
                     <h3>Information</h3>
                         <p id="weather">Weather</p>
-                        <div id="weather-icon"></div>
+                        <img id="weather-icon" src="" alt="">
                         <p id="place">Place: Ririe, Idaho, United States</p>
                         <p id="visits"></p>
                 </section>
