--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <h3>Information</h3>
                         <p id="weather">Weather</p>
                         <img id="weather-icon" src="" alt="">
+                        <figcaption></figcaption>
                         <p id="place">Place: Ririe, Idaho, United States</p>
                         <p id="visits"></p>
                 </section>
