--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,7 +27,7 @@
                 <h2>RIRIE: A PLACE WORTH INVESTING IN</h2>
                 <!-- <button id="join">Join</button>  -->
             </div>
-            <img src="images/RirieViews.webp" alt="Ririe Photo" id="hero-img" loading="eager"> 
+            <img src="images/RirieViewsSmaller.webp" alt="Ririe Photo" id="hero-img" loading="eager">  
         </div>  
     </header>
     <nav>
@@ -120,6 +120,7 @@
         
         </footer>
         <script src="scripts/chamber.js"></script>
+        <script src="scripts/join.js"></script>
     </body>
 
 </html>
