Cress Creek photo

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,8 +47,8 @@
     <main>
         <div class="sections">
             <section id="our-town">
-                <h3>Our Town</h3>
-                <img src="" alt="" id="old-and-new-Ririe">
+                <h3>A Quiet Town in the Country</h3>
+                <img src="images/CressCreek.webp" alt="Cress Creek" id="old-and-new-Ririe">
                 <p>Welcome to Ririe, Idaho, a charming town nestled in the heart of the Gem State, where the breathtaking landscapes and warm community spirit. Known for its rich agricultural heritage and friendly atmosphere, Ririe offers a blend of small-town charm and outdoor adventure. Surrounded by the majestic Teton and Snake River mountain ranges, residents and visitors alike can enjoy year-round recreational activities, from hiking and fishing to winter sports in the nearby mountains. The town's vibrant community, comprised of local businesses and welcoming residents, fosters a sense of belonging and pride. Ririe's Chamber of Commerce is dedicated to promoting economic growth in this wonderful gem of a town.</p>
             </section>
             <section id="weather">
