--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,9 @@
             <section id="our-town">
                 <h3>A Quiet Town in the Country</h3>
                 <img src="images/CressCreek.webp" alt="Cress Creek" id="old-and-new-Ririe" loading="lazy" width="400" height="600">
-                <p>Welcome to Ririe, Idaho, a charming town nestled in the heart of the Gem State, where the breathtaking landscapes and warm community spirit. Known for its rich agricultural heritage and friendly atmosphere, Ririe offers a blend of small-town charm and outdoor adventure. Surrounded by the majestic Teton and Snake River mountain ranges, residents and visitors alike can enjoy year-round recreational activities, from hiking and fishing to winter sports in the nearby mountains. The town's vibrant community, comprised of local businesses and welcoming residents, fosters a sense of belonging and pride. Ririe's Chamber of Commerce is dedicated to promoting economic growth in this wonderful gem of a town.</p>
+                <p>
+                    Welcome to Ririe, Idaho – where genuine warmth meets breathtaking landscapes. Tucked in the heart of eastern Idaho, our charming town invites you to experience the perfect fusion of community spirit and natural wonders. Surrounded by the majestic Teton Mountain Range, Ririe is a haven for outdoor enthusiasts, offering unforgettable adventures and a tight-knit, friendly atmosphere. Explore the simplicity and beauty of Ririe, where every visit feels like coming home.
+                </p>
             </section>
             <section id="weather">
                 <h3>Weather</h3>
