--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,7 +65,7 @@
                     </figure>
                     
                     <div class="three-day-div">
-                        <h4>Three Day Forecast (fahrenheit)</h4>
+                        <h4>Three Day Forecast</h4>
                         <div id="three-day-forecast"></div>
                     </div>
                      
