--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,11 +47,18 @@
     <main>
         <div class="sections">
             <section id="our-town">
-                <h3>A Quiet Town in the Country</h3>
-                <img src="images/CressCreek.webp" alt="Cress Creek" id="old-and-new-Ririe" loading="lazy" width="400" height="600">
+                <h3>This Week's News</h3>
+                <!-- <img src="images/CressCreek.webp" alt="Cress Creek" id="old-and-new-Ririe" loading="lazy" width="400" height="600">
                 <p>
                     Welcome to Ririe, Idaho – where genuine warmth meets breathtaking landscapes. Tucked in the heart of eastern Idaho, our charming town invites you to experience the perfect fusion of community spirit and natural wonders. Surrounded by the majestic Teton Mountain Range, Ririe is a haven for outdoor enthusiasts, offering unforgettable adventures and a tight-knit, friendly atmosphere. Explore the simplicity and beauty of Ririe, where every visit feels like coming home.
-                </p>
+                </p> -->
+                <ul>
+                    <li>Potato Harvest Ends</li>
+                    <li>Ririe School district out on December 21st</li>
+                    <li>Christmas Nativity on Decemeber 13th</li>
+                    <li>Breakfast with Santa on December 15th</li>
+                    
+                </ul>
             </section>
             <section id="weather">
                 <h3>Weather</h3>
