--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ririe Chamber of Commcerce">
-    <meta name="description" content="WDD 230 - Chamber of Commerce Homepage">
-    <meta property="og:title" content="Chamber Homepage">
+    <meta name="description" content="WDD 230 - Chamber of Commerce Directory">
+    <meta property="og:title" content="Chamber Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.bing.com/images/search?view=detailV2&ccid=dJDk6uP5&id=D3C1FAA7435CB904A534D5F2B7DD6ADC0A3F74BF&thid=OIP.dJDk6uP5u4C9lYSW8YhbVwHaD5&mediaurl=https%3a%2f%2ffarm4.staticflickr.com%2f3878%2f14875343312_69775bc436_o.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.7490e4eae3f9bb80bd958496f1885b57%3frik%3dv3Q%252fCtxq3bfy1Q%26pid%3dImgRaw%26r%3d0&exph=843&expw=1600&q=ririe+idaho&simid=608006501712486413&FORM=IRPRST&ck=1E2BC1CD9EFD6C56FCDD545C9600D6C0&selectedIndex=14">
     <meta property="og:url" content="https://byuixana.github.io/wdd230/">
