--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ririe Chamber of Commcerce Discover Page">
+    <meta name="author" content="Ririe Chamber of Commcerce Discover">
     <meta name="description" content="WDD 230 - Chamber of Commerce Discover">
     <meta property="og:title" content="Chamber Homepage">
     <meta property="og:type" content="website">
