--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,7 +66,7 @@
      -->
                     <figure id="today-temp">
                         <h4>Today's Weather</h4>
-                        <img id="weather-icon" src="placeholder.png" alt="weather">
+                        <img id="weather-icon" src="" alt="weather">
                         <p id="temperature"></p>
                         <figcaption></figcaption>
                     </figure>
