--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -123,5 +123,6 @@
     </footer>
     <script src="scripts/chamber.js"></script>
     <script src="scripts/join.js"></script>
+    <script src="scripts/discover.js"></script>
 </body>
 </html>
