Title Fix Discover

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://www.bing.com/images/search?view=detailV2&ccid=dJDk6uP5&id=D3C1FAA7435CB904A534D5F2B7DD6ADC0A3F74BF&thid=OIP.dJDk6uP5u4C9lYSW8YhbVwHaD5&mediaurl=https%3a%2f%2ffarm4.staticflickr.com%2f3878%2f14875343312_69775bc436_o.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.7490e4eae3f9bb80bd958496f1885b57%3frik%3dv3Q%252fCtxq3bfy1Q%26pid%3dImgRaw%26r%3d0&exph=843&expw=1600&q=ririe+idaho&simid=608006501712486413&FORM=IRPRST&ck=1E2BC1CD9EFD6C56FCDD545C9600D6C0&selectedIndex=14">
     <meta property="og:url" content="https://byuixana.github.io/wdd230/">
     <link rel="icon" href="ririe.ico">
-    <title>Ririe - Chamber of Commerce</title>
+    <title>Ririe - Chamber of Commerce Discover</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
