--- a/chamber/join.html
+++ b/chamber/join.html
@@ -121,6 +121,7 @@
         </footer>
         <script src="scripts/chamber.js"></script>
         <script src="scripts/join.js"></script>
+        <script src="form.js"></script>
     </body>
 
 </html>
